--- a/.github/workflows/automatic-changelog.yml
+++ b/.github/workflows/automatic-changelog.yml
@@ -1,8 +1,9 @@
 name: Automatic changelog entry
 on:
-  push:
+  pull_request:
     branches:
       - dev-2.x
+    types: [closed]
 
 jobs:
   changelog-entry:
@@ -10,17 +11,17 @@ jobs:
     steps:
 
       - name: Checkout
-        if: ${{ github.event.pull_request.merged }}
+        if: github.event.pull_request.merged
         uses: actions/checkout@v2
 
       - name: Generate changelog entry from PR information
-        if: ${{ github.event.pull_request.merged }}
+        if: github.event.pull_request.merged
         run: |
           git config user.name "OTP Changelog Bot"
           git config user.email "<>"
 
           awk '/AUTOMATIC_CHANGELOG_PLACEHOLDER/ {
-            print "- {{}} [#{{ github.event.pull_request.number }}]({{ github.event.pull_request.html_url }})"
+            print "- ${{ github.event.pull_request.number }} [#${{ github.event.pull_request.number }}](${{ github.event.pull_request.html_url }})"
           } { print }' docs/Changelog.md > docs/Changelog.generated.md
 
           mv docs/Changelog.generated.md docs/Changelog.md
