--- a/.github/workflows/automatic-changelog.yml
+++ b/.github/workflows/automatic-changelog.yml
@@ -18,14 +18,15 @@ jobs:
         if: github.event.pull_request.merged
         run: |
           git config user.name "OTP Changelog Bot"
-          git config user.email "<>"
+          git config user.email "changelog-bot@opentripplanner.org"
 
+          # add a line above the one which contains AUTOMATIC_CHANGELOG_PLACEHOLDER
           awk '/AUTOMATIC_CHANGELOG_PLACEHOLDER/ {
-            print "- ${{ github.event.pull_request.number }} [#${{ github.event.pull_request.number }}](${{ github.event.pull_request.html_url }})"
+            print "- ${{ github.event.pull_request.title }} [#${{ github.event.pull_request.number }}](${{ github.event.pull_request.html_url }})"
           } { print }' docs/Changelog.md > docs/Changelog.generated.md
 
           mv docs/Changelog.generated.md docs/Changelog.md
 
           git add docs/Changelog.md
-          git commit -m "[ci skip] Add automatic changelog entry for #{{ github.event.pull_request.number }}"
+          git commit -m "Add changelog entry for ${{ github.event.pull_request.number }} [ci skip]"
           git push origin dev-2.x
