--- a/.github/workflows/automatic-changelog.yml
+++ b/.github/workflows/automatic-changelog.yml
@@ -33,7 +33,10 @@ jobs:
 
             mv docs/Changelog.generated.md docs/Changelog.md
 
+            git config user.name "OTP Changelog Bot"
+            git config user.email "changelog-bot@opentripplanner.org"
+
             git add docs/Changelog.md
             git commit -m "Add changelog entry for #${NUMBER} [ci skip]"
-            git push origin changelog-test
+            git push https://${GITHUB_TOKEN}@github.com/leonardehrenfried/OpenTripPlanner.git changelog-test
           fi
