--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   changelog-entry:
-    if: github.event.pull_request.merged && github.repository_owner == 'opentripplanner'
+    if: github.event.pull_request.merged && github.repository_owner == 'leonardehrenfried'
     runs-on: ubuntu-latest
     steps:
 
@@ -45,7 +45,7 @@ jobs:
           URL: ${{ github.event.pull_request.html_url }}
 
   serialization-version:
-    if: github.event.pull_request.merged && github.repository_owner == 'opentripplanner' && contains(github.event.pull_request.labels.*.name, 'bump serialization version')
+    if: github.event.pull_request.merged && github.repository_owner == 'leonardehrenfried' && contains(github.event.pull_request.labels.*.name, 'bump serialization version')
     runs-on: ubuntu-latest
     needs: [changelog-entry]
     steps:
