--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -13,8 +13,6 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.CHANGELOG_TOKEN }}
 
       - name: Configure git user
         run: |
@@ -36,7 +34,7 @@ jobs:
             mv $TEMP_FILE $FILE
             git add $FILE
             git commit -m "Add changelog entry for #${NUMBER} [ci skip]"
-            git push ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git HEAD:dev-2.x
+            git push HEAD:dev-2.x
           fi
         env:
           # Use environment variables to prevent injection attack
@@ -51,8 +49,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.CHANGELOG_TOKEN }}
 
       - name: Configure git user
         run: |
@@ -67,7 +63,7 @@ jobs:
  
           git add pom.xml
           git commit -m "Bumping serialization version id for #${NUMBER}"
-          git push ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git HEAD:dev-2.x
+          git push HEAD:dev-2.x
         env:
           # Use environment variables to prevent injection attack
           NUMBER: ${{ github.event.pull_request.number }}
