--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -34,7 +34,7 @@ jobs:
             mv $TEMP_FILE $FILE
             git add $FILE
             git commit -m "Add changelog entry for #${NUMBER} [ci skip]"
-            git push HEAD:dev-2.x
+            git push origin HEAD:dev-2.x
           fi
         env:
           # Use environment variables to prevent injection attack
@@ -70,7 +70,7 @@ jobs:
           git commit -m "Bumping serialization version id for #${NUMBER}"
           # just for safety as the git repo can be eventually consistent and this push competes with the changelog entry
           git pull
-          git push HEAD:dev-2.x
+          git push origin HEAD:dev-2x
         env:
           # Use environment variables to prevent injection attack
           NUMBER: ${{ github.event.pull_request.number }}
