--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -73,7 +73,7 @@ jobs:
           git add pom.xml
           git commit -m "Bumping serialization version id for #${NUMBER}"
           # just for safety as the git repo can be eventually consistent and this push competes with the changelog entry
-          git pull
+          git pull origin dev-2.x
           git push ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git HEAD:dev-2.x
         env:
           # Use environment variables to prevent injection attack
